Remvoe horizontal rule, cleanup pl twig files for images.

--- a/config/sync/field.storage.paragraph.field_background_style.yml
+++ b/config/sync/field.storage.paragraph.field_background_style.yml
@@ -15,10 +15,10 @@ settings:
   allowed_values:
     -
       value: grey
-      label: grey
+      label: Grey
     -
       value: image
-      label: image
+      label: Image
   allowed_values_function: ''
 module: options
 locked: false
