--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/links-files/links-files.yml
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/links-files/links-files.yml
@@ -4,7 +4,7 @@ widget_title:
 #to add backgrounds, use either link_back_image or link_back color. Allowed colors are orange, blue, grey
 #additional colors must be added in the drupal background style field.
 link_back_color:
-  "blue"
+  "grey"
 link_back_img:
   
 links:
@@ -35,10 +35,6 @@ files:
       "File 2"
     file_url: 
       "https://www.pdf-archive.com/2011/02/27/dummy/dummy.pdf"
-
-
-link_summary:
-  "Quae cum praeponunt, ut sit aliqua rerum selectio, naturam videntur sequi; Quis Aristidem non mortuum diligit? Nummus in Croesi divitiis obscuratur, pars est tamen divitiarum. Nec vero sum nescius esse utilitatem in historia, non modo voluptatem."
 
 
 
