Allow support book menu in support book

--- a/config/sync/node.type.support_book.yml
+++ b/config/sync/node.type.support_book.yml
@@ -6,8 +6,9 @@ dependencies:
     - menu_ui
 third_party_settings:
   menu_ui:
-    available_menus: {  }
-    parent: ''
+    available_menus:
+      - support-book
+    parent: 'support-book:'
 _core:
   default_config_hash: ji4pL4xruOxfrgS7781kaPIt0nOX9e6KBPJH8XTWxwU
 name: 'Support Book'
