--- a/config/sync/core.entity_view_display.node.blog.default.yml
+++ b/config/sync/core.entity_view_display.node.blog.default.yml
@@ -15,11 +15,27 @@ dependencies:
     - layout_builder
     - layout_discovery
     - metatag
+    - system
     - text
     - user
 third_party_settings:
   layout_builder:
     sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          f4d2b75e-a332-4c00-b169-75faee697c60:
+            uuid: f4d2b75e-a332-4c00-b169-75faee697c60
+            region: content
+            configuration:
+              id: system_breadcrumb_block
+              label: Breadcrumbs
+              provider: system
+              label_display: '0'
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
       -
         layout_id: layout_onecol
         layout_settings: {  }
