--- a/config/sync/core.entity_view_display.node.support_book.default.yml
+++ b/config/sync/core.entity_view_display.node.support_book.default.yml
@@ -10,11 +10,27 @@ dependencies:
     - layout_builder
     - layout_discovery
     - menu_block
+    - system
     - text
     - user
 third_party_settings:
   layout_builder:
     sections:
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          176805da-bf9e-449d-bffe-958a00a7ba3f:
+            uuid: 176805da-bf9e-449d-bffe-958a00a7ba3f
+            region: content
+            configuration:
+              id: system_breadcrumb_block
+              label: Breadcrumbs
+              provider: system
+              label_display: '0'
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
       -
         layout_id: layout_onecol
         layout_settings: {  }
