Redo menu block to work with layout builder edit config

--- a/web/themes/oc_patterns/oc_patterns.libraries.yml
+++ b/web/themes/oc_patterns/oc_patterns.libraries.yml
@@ -3,6 +3,7 @@ global-styling:
   css:
     theme:
       dist/style.css: {}
+      https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css: {type: external, minified: true }
   js:
     components/_patterns/00-base/global/global.js: {}
     components/_patterns/02-molecules/blocks/header-search-block/search-block.js: {}
