custom media document icons for embed browser and content > media view

--- a/config/sync/core.entity_form_display.paragraph.links_files.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.links_files.default.yml
@@ -37,6 +37,9 @@ content:
       allow_existing: true
       match_operator: CONTAINS
       override_labels: false
+      collapsible: false
+      collapsed: false
+      allow_duplicate: false
     third_party_settings:
       entity_browser_entity_form:
         entity_browser_id: file_browser
