--- a/config/sync/core.entity_view_display.media.image.default.yml
+++ b/config/sync/core.entity_view_display.media.image.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.media.image.field_caption
+    - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - image.style.max_2600x2600
     - media_entity.bundle.image
@@ -78,6 +79,7 @@ content:
 hidden:
   addtoany: true
   created: true
+  field_media_categories: true
   name: true
   thumbnail: true
   uid: true
