--- a/config/sync/core.entity_form_display.media.document.default.yml
+++ b/config/sync/core.entity_form_display.media.document.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.document.field_media_categories
     - field.field.media.document.field_media_file
     - media_entity.bundle.document
   module:
@@ -14,6 +15,12 @@ targetEntityType: media
 bundle: document
 mode: default
 content:
+  field_media_categories:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_media_file:
     weight: 0
     settings:
