--- a/config/sync/core.entity_form_display.media.image.background_image.yml
+++ b/config/sync/core.entity_form_display.media.image.background_image.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_form_mode.media.background_image
     - field.field.media.image.field_caption
+    - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - image.style.thumbnail
     - media_entity.bundle.image
@@ -17,6 +18,12 @@ targetEntityType: media
 bundle: image
 mode: background_image
 content:
+  field_media_categories:
+    type: options_select
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_media_image:
     weight: 0
     settings:
