--- a/config/sync/core.entity_form_display.media.video.default.yml
+++ b/config/sync/core.entity_form_display.media.video.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.video.field_media_categories
     - field.field.media.video.field_media_video_embed_field
     - media_entity.bundle.video
   module:
@@ -14,6 +15,12 @@ targetEntityType: media
 bundle: video
 mode: default
 content:
+  field_media_categories:
+    type: options_select
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_media_video_embed_field:
     type: video_embed_field_textfield
     weight: 0
