--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -4,10 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.compact
-    - field.field.user.user.user_picture
-    - image.style.thumbnail
   module:
-    - image
     - layout_builder
     - layout_discovery
     - user
@@ -17,39 +14,13 @@ third_party_settings:
       -
         layout_id: layout_onecol
         layout_settings: {  }
-        components:
-          003c5ff0-b0b3-4bd4-b9f1-47cd1e6d7d40:
-            uuid: 003c5ff0-b0b3-4bd4-b9f1-47cd1e6d7d40
-            region: content
-            configuration:
-              id: 'field_block:user:user:user_picture'
-              label_display: ''
-              formatter:
-                type: image
-                settings:
-                  image_style: thumbnail
-                  image_link: content
-                third_party_settings: {  }
-                label: hidden
-              context_mapping:
-                entity: layout_builder.entity
-            additional: {  }
-            weight: 0
+        components: {  }
 _core:
   default_config_hash: 1jV7tW1bYyDddxe_sUIDaD8ZAaGEek8nl3l4Y-Cd3-I
 id: user.user.compact
 targetEntityType: user
 bundle: user
 mode: compact
-content:
-  user_picture:
-    type: image
-    weight: 0
-    settings:
-      image_style: thumbnail
-      image_link: content
-    third_party_settings: {  }
-    label: hidden
-    region: content
+content: {  }
 hidden:
   member_for: true
