--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -23,4 +23,6 @@ bundle: user
 mode: compact
 content: {  }
 hidden:
+  field_authored_placeholder: true
+  field_user_image: true
   member_for: true
