--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,10 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.user.user.field_authored_placeholder
     - field.field.user.user.field_user_image
+    - field.field.user.user.field_user_quick_links
     - views.view.user_dashboard
-    - views.view.user_links
   module:
     - layout_builder
     - layout_discovery
@@ -57,24 +56,6 @@ third_party_settings:
                 entity: '@user.current_user_context:current_user'
             additional: {  }
             weight: 2
-          b0b52c41-e875-4d7c-bbe1-19ed8cb87f72:
-            uuid: b0b52c41-e875-4d7c-bbe1-19ed8cb87f72
-            region: content
-            configuration:
-              id: 'field_block:user:user:roles'
-              label: Roles
-              provider: layout_builder
-              label_display: '0'
-              formatter:
-                label: inline
-                type: entity_reference_label
-                settings:
-                  link: false
-                third_party_settings: {  }
-              context_mapping:
-                entity: '@user.current_user_context:current_user'
-            additional: {  }
-            weight: 3
           fad33807-db64-4118-bd3c-f961fe16c847:
             uuid: fad33807-db64-4118-bd3c-f961fe16c847
             region: content
@@ -97,25 +78,12 @@ third_party_settings:
         layout_id: layout_onecol
         layout_settings: {  }
         components:
-          c3d0a6e5-73d8-4aec-acd5-9370ea8fdcee:
-            uuid: c3d0a6e5-73d8-4aec-acd5-9370ea8fdcee
+          8f4a3d1d-7609-459c-b2cf-b17d701b7443:
+            uuid: 8f4a3d1d-7609-459c-b2cf-b17d701b7443
             region: content
             configuration:
-              id: 'views_block:user_links-user_quick_links'
-              label: ''
-              provider: views
-              label_display: visible
-              views_label: ''
-              items_per_page: none
-              context_mapping: {  }
-            additional: {  }
-            weight: 0
-          b2c13a60-40eb-4d82-89e2-af019f383d3b:
-            uuid: b2c13a60-40eb-4d82-89e2-af019f383d3b
-            region: content
-            configuration:
-              id: 'field_block:user:user:field_authored_placeholder'
-              label: 'Authored Placeholder'
+              id: 'field_block:user:user:field_user_quick_links'
+              label: 'Quick Links'
               provider: layout_builder
               label_display: '0'
               formatter:
@@ -127,9 +95,9 @@ third_party_settings:
               context_mapping:
                 entity: '@user.current_user_context:current_user'
             additional: {  }
-            weight: 1
-          2e789ad4-26bc-45a5-aa84-d554c82b3b50:
-            uuid: 2e789ad4-26bc-45a5-aa84-d554c82b3b50
+            weight: 0
+          0f963135-4282-4c8d-b058-26a5bc59f354:
+            uuid: 0f963135-4282-4c8d-b058-26a5bc59f354
             region: content
             configuration:
               id: 'views_block:user_dashboard-authored'
@@ -150,14 +118,6 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
-  field_authored_placeholder:
-    weight: 7
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_user_image:
     weight: 6
     label: above
@@ -165,6 +125,14 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_user_quick_links:
+    weight: 7
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   member_for:
     weight: 5
