--- a/config/sync/field.storage.user.field_user_quick_links.yml
+++ b/config/sync/field.storage.user.field_user_quick_links.yml
@@ -1,11 +1,11 @@
-uuid: 92f37b36-e5ae-44f2-b3f2-6a58e78bd762
+uuid: db966991-0d25-49cf-aed9-124f63173609
 langcode: en
 status: true
 dependencies:
   module:
     - user
-id: user.field_authored_placeholder
-field_name: field_authored_placeholder
+id: user.field_user_quick_links
+field_name: field_user_quick_links
 entity_type: user
 type: string
 settings:
