--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -19,6 +19,7 @@ permissions:
   - 'access media overview'
   - 'access panels in-place editing'
   - 'access toolbar'
+  - 'access user profiles'
   - 'access video_browser entity browser pages'
   - 'access webform overview'
   - 'add content to books'
